src/tess/tl/test/fail/test_fail_cchar_unsigned_unify.tl
// CChar should not unify with unsigned integer types
#module main
take_uint(x: CUnsignedInt) -> CUnsignedInt { x }
main() {
    c: CChar := 65
    take_uint(c)
}
